--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "tabs",
     "storage",
     "unlimitedStorage",
-    "scripting"
+    "scripting",
+    "contextMenus"
   ],
   
   "host_permissions": [
@@ -32,23 +33,10 @@
   
   "action": {
     "default_popup": "popup/popup.html",
-    "default_title": "AI Virtual Try-On",
-    "default_icon": {
-      "16": "assets/icons/icon16.png",
-      "32": "assets/icons/icon32.png",
-      "48": "assets/icons/icon48.png",
-      "128": "assets/icons/icon128.png"
-    }
+    "default_title": "AI Virtual Try-On"
   },
-  
+
   "options_page": "options/options.html",
-  
-  "icons": {
-    "16": "assets/icons/icon16.png",
-    "32": "assets/icons/icon32.png",
-    "48": "assets/icons/icon48.png",
-    "128": "assets/icons/icon128.png"
-  },
   
   "web_accessible_resources": [
     {
