--- a/manifest.json
+++ b/manifest.json
@@ -49,6 +49,6 @@
   ],
   
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data: blob:;"
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data: blob: https:;"
   }
 }
